--- a/src/assets/style/global.scss
+++ b/src/assets/style/global.scss
@@ -1,10 +1,7 @@
 @import '~antd/dist/antd.css';
 
 html,
-body,
-#root {
-  height: 100%;
-  width: 100%;
+body {
   padding: 0;
   margin: 0;
   font-size: 16px;
