实现登录和退出

--- a/src/components/NavBar/style.module.scss
+++ b/src/components/NavBar/style.module.scss
@@ -23,8 +23,8 @@
     }
 
     .navbarMenu {
-      margin-left: auto;
-
+      flex: auto;
+      justify-content: flex-end;
       :global .ant-menu-item::after {
         border-bottom: none;
       }
