--- a/src/components/NavBar/style.module.scss
+++ b/src/components/NavBar/style.module.scss
@@ -28,7 +28,8 @@
       flex: auto;
       display: flex;
       justify-content: flex-end;
-      :global .ant-menu-item {
+      :global .ant-menu-item,
+      :global .ant-menu-submenu {
         border-bottom: none;
       }
     }
