实现搜索分页

--- a/src/pages/search/style.module.scss
+++ b/src/pages/search/style.module.scss
@@ -75,6 +75,12 @@
           }
         }
       }
+
+      :global .ant-pagination {
+        margin-top: 10px;
+        display: flex;
+        justify-content: center;
+      }
     }
   }
 }
