实现删除书籍

--- a/src/pages/search/style.module.scss
+++ b/src/pages/search/style.module.scss
@@ -39,7 +39,7 @@
         display: flex;
 
         .bookDesc {
-          margin-left: 5px;
+          margin-left: 16px;
           flex: auto;
 
           .bookTitle {
@@ -72,6 +72,10 @@
 
           .bookAddCartBtn {
             margin-top: 10px;
+          }
+
+          .deleteBookBtn {
+            margin-left: 10px;
           }
         }
       }
