完成增加订单

--- a/src/pages/search/style.module.scss
+++ b/src/pages/search/style.module.scss
@@ -66,6 +66,10 @@
             }
           }
 
+          .bookCount {
+            margin-top: 2px;
+          }
+
           .bookLanguageIsbn {
             margin-top: 2px;
           }
